adds event listener to modal X icon

--- a/views/userHomePage.handlebars
+++ b/views/userHomePage.handlebars
@@ -90,24 +90,19 @@
 
   const escapeRoomCards = $('.escape-room'); escapeRoomCards.on('click', async (e) => { 
     const escapeRoomTheme = e.currentTarget.id;
-    const response = await fetch(`http://localhost:3001/${escapeRoomTheme}`);
-    
+    //const domain = window.location.hostname;
+    const response = await fetch(`http://localhost:3001/${escapeRoomTheme}`); //change this to actual website URL in produciton, use template literal to insert domain variable
     const data = await response.json();
-    console.log(data.rooms[0]);
-    console.log("-----------------")
-    
     //open a modal that displays the escape room information
-  console.log(e.currentTarget);
-
-
 const img = $('#escape-room-image').attr('src', data.rooms[0].image_url);
 const theme = $('#theme').text(data.rooms[0].theme);
 const difficulty = $('#difficulty-level').text(data.rooms[0].difficulty);
 const duration = $('#duration').text(data.rooms[0].duration);
 const description = $('#description').text(data.rooms[0].description);
-  const modal = $('#escape-room-modal').removeClass('hidden');
- 
-  
-   });
+const modal = $('#escape-room-modal').removeClass('hidden');
+ });
+
+   $("#closeModal").on("click", () => $("#escape-room-modal").addClass("hidden"));
+
   
 </script>
