--- a/views/userHomePage.handlebars
+++ b/views/userHomePage.handlebars
@@ -90,8 +90,8 @@
 
   const escapeRoomCards = $('.escape-room'); escapeRoomCards.on('click', async (e) => { 
     const escapeRoomTheme = e.currentTarget.id;
-    //const domain = window.location.hostname;
-    const response = await fetch(`http://localhost:3001/${escapeRoomTheme}`); //change this to actual website URL in produciton, use template literal to insert domain variable
+    const domain = window.location.hostname;
+    const response = await fetch(`http://${domain}/${escapeRoomTheme}`); //change this to actual website URL in produciton, use template literal to insert domain variable
     const data = await response.json();
     //open a modal that displays the escape room information
 const img = $('#escape-room-image').attr('src', data.rooms[0].image_url);
