welcome page style update -margin

--- a/views/welcomePage.handlebars
+++ b/views/welcomePage.handlebars
@@ -15,7 +15,7 @@
   </section>
   <section class="py-8 grid grid-cols-1 gap-8 md:grid-cols-2 md:mx-10">
 
-    <div class="rounded-lg bg-white p-6 shadow-lg text-center">
+    <div class="mx-5 rounded-lg bg-white p-6 shadow-lg text-center">
       <img src="/img/themes.jpg" alt="Escape Room Theme" class="rounded-md mx-auto mb-4" />
       <h3 class="font-semibold text-3xl mb-4">Variety of Themes</h3>
       <p class="text-xl">
@@ -27,7 +27,7 @@
       class="bg-blue-700 text-slate-50 font-bold py-3 px-6 mt-6 inline-block rounded hover:bg-blue-800"
     >View Escape Rooms</a>
     </div>
-    <div class="rounded-lg bg-white p-6 shadow-lg text-center">
+    <div class="mx-5 rounded-lg bg-white p-6 shadow-lg text-center">
       <img src="/img/booking.jpg" alt="Booking System" class="rounded-md mx-auto mb-4" />
       <h3 class="font-semibold text-3xl mb-4">Easy Booking System</h3>
       <p class="text-xl">
