creates API to fetch booking data based on date and displays it to page dynamically

--- a/views/managebookings.handlebars
+++ b/views/managebookings.handlebars
@@ -35,20 +35,7 @@
       </div>
     </div>
     
-    <div id="bookings">
-      {{#each bookings}}
-        <div class="bg-white rounded-lg shadow-lg p-5 mb-5">
-          <h3 class="text-xl font-bold">{{this.escaperoom.theme}}</h3>
-          <p>Time: {{formatTime this.time}}</p>
-          <p>Date: {{formatDate this.date}}</p>
-          <p>Booked by: {{this.user.name}}</p>
-          <div class="flex justify-end">
-            <button class="px-3 py-1 bg-green-500 text-white rounded hover:bg-green-700 mr-2">✎</button>
-            <button class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-700">✕</button>
-          </div>
-        </div>
-      {{/each}}
-    </div>
+    <div id="bookings"></div>
 
    
   </section>
@@ -63,20 +50,65 @@
 <script>
 //handle on date element
 const preformattedDate = $('#date').text();
-console.log(preformattedDate);
-const formattedDate = dayjs(preformattedDate);
-console.log(formattedDate);
+//console.log(preformattedDate);
+//console.log('--------')
+const formattedDate = dayjs(preformattedDate).format('YYYY-MM-DD')
+//console.log(formattedDate);
 
 //$('#date').text("Date: {{date}}");
 
-const refreshBookings = (date) => {
+const fetchBookings = async (date) => {
   try {
-    d = date;
-    window.location.href=`/admin/bookings/${d}`;
+    const query = date;
+    const response = await fetch(`http://localhost:3001/admin/bookings/${query}`);
+    const data = await response.json();
+    //console.log("----BOOKING DATA UNDERNEATH-----")
+    //console.log(data);
+    return data;
   } catch (error) {
     console.error('Error:', error);
   }
+};
+
+const formatTime = (time) => {
+  // Parse the time in the "HH:mm" format
+  const parsedTime = dayjs(`2023-01-01T${time}`);
+  // Format the parsed time in the "hh:mm A" format
+  return parsedTime.format('hh:mm A');
+};
+
+const displayBookings = async () => {
+  const bookings = await fetchBookings(formattedDate);
+
+$('#bookings').empty();
+bookings.forEach((booking) => {
+const bookingTime = formatTime(booking.time);
+
+  //create div that will contain booking
+  const bookingDiv = $('<div>').addClass('bg-white rounded-lg shadow-lg p-5 mb-5');
+    //create h3 element
+      const heading = $('<h3>').addClass('text-xl font-bold').html(booking.escaperoom.theme);
+    //p element time
+      const time = $('<p>').text('Time: ').html('Time: ' + bookingTime);
+    //p element date
+      const date = $('<p>').text('Date: ').html('Date: ' + dayjs(booking.date).format('MM/DD/YYYY'));
+    //p element name
+      const name = $('<p>').text('Booked By: ').html('Booked By: ' + booking.user.name);
+    //div
+      const options = $('<div>').addClass('flex justify-end');
+    //button, edit
+      const edit = $('<button>').addClass('px-3 py-1 bg-green-500 text-white rounded hover:bg-green-700 mr-2').text('✎');
+    //button, delete
+      const remove = $('<button>').addClass('px-3 py-1 bg-red-500 text-white rounded hover:bg-red-700').text('✕');
+
+//append all elements
+options.append(edit, remove);
+bookingDiv.append(heading, time, date, name, options);
+$('#bookings').append(bookingDiv);
+});
 }
+
+displayBookings();
 
 
 $('#left-arrow').on('click', () => {
