fixes alignment of filter dropdown

--- a/views/managebookings.handlebars
+++ b/views/managebookings.handlebars
@@ -22,7 +22,7 @@
         >→</button>
       </div>
 
-      <div class="mt-5">
+      <div class="">
         <label for="rooms" class="text-lg font-bold mb-2">Filter by Escape Room:</label>
         <select
           name="rooms"
