--- a/views/managebookings.handlebars
+++ b/views/managebookings.handlebars
@@ -39,9 +39,10 @@
 
       <div class="relative">
         <input
+        id="user-search"
           type="text"
-          class="bg-white h-10 px-5 pr-10 rounded-full text-sm focus:outline-none"
-          placeholder="Search bookings"
+          class="bg-white h-10 px-5 pr-10 rounded-full  focus:outline-none"
+          placeholder="Search bookings by User"
         />
         <button type="submit" class="absolute right-0 top-0 mt-2 mr-4">
           <!-- Add the SVG for the search icon here -->
