completes DELETE user functionality

--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -26,7 +26,7 @@
 
       </div></a>
 
-    <a href="/admin/users">
+    <a href="/admin/manageusers">
       <div
         class="flex items-center rounded-lg bg-white p-5 mx-5 text-center shadow-lg hover:border-blue-700/50 hover:border-2 lg:h-36 lg:mx-5 xl:h-32"
       >
