creates GET route for manage escape rooms view

--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -37,7 +37,7 @@
       </div>
     </a>
 
-    <a href="/admin/rooms">
+    <a href="/admin/ManageEscapeRooms">
       <div
         class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg hover:border-blue-700/50 hover:border-2 lg:h-36 lg:mx-5 xl:h-32"
       >
