--- a/views/manageescaperooms.handlebars
+++ b/views/manageescaperooms.handlebars
@@ -4,16 +4,71 @@
     >+ Create Room</button>
   </div>
   <h1 class="text-center text-3xl">Active Rooms</h1>
-  <div id="room-list" class="grid md:grid-cols-2 lg:grid-cols-3">
+  <div id="room-list" class="items-center grid md:grid-cols-2 lg:grid-cols-3">
     {{#each rooms}}
-      <div class="escape-room bg-white rounded-lg mx-8 my-5 py-2 px-5">
-        <h1 class="text-2xl text-center p-2">{{this.theme}}</h1>
-        <img src={{this.image_url}} alt="Escape Room Image" class="rounded-md" />
+      <div
+        class="cursor-pointer escape-room bg-white rounded-lg mx-8 my-5 py-2 px-5"
+      >
+        <h1 class="text-xl text-center p-2">{{this.theme}}</h1>
+        <img src={{this.image_url}} alt="{{this.theme}}" class="rounded-md" />
         {{!-- <p class="py-2">{{this.description}}</p>
         <p>Difficulty: {{this.difficulty}} </p>
         <p>Duration: {{this.duration}}</p> --}}
       </div>
     {{/each}}
   </div>
-   <h1 class="text-center text-3xl">Disabled Rooms</h1>
+  <h1 class="text-center text-3xl">Disabled Rooms</h1>
+
 </div>
+
+<!-- Escape Room modal -->
+<div
+  id="escape-room-modal"
+  class="fixed h-screen inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
+>
+  <div
+    class="overscroll-contain max-h-screen overflow-y-auto relative bg-white p-6 rounded-lg shadow-lg w-full max-w-lg"
+  >
+    <span
+      id="closeModal"
+      class="absolute top-5 right-8 text-xl font-bold cursor-pointer"
+    >&times;</span>
+    <h2 class="font-bold text-4xl my-4" id="escape-room-theme"></h2>
+    <div class="flex flex-wrap justify-between">
+      <div class="w-full md:w-1/3">
+        <img id="escape-room-image" class="w-full h-auto rounded-lg mb-4" alt="" />
+        <div class="flex items-center justify-between">
+
+        </div>
+      </div>
+      <div class="w-full md:w-2/3 pl-4">
+        <div class="flex text-center items-start justify-between mb-2">
+          <p class="font-semibold text-lg">Description:</p>
+          <p id="description" class="text-right ml-2"></p>
+        </div>
+        <div class="flex text-center items-start justify-between mb-2">
+          <p class="font-semibold text-lg">Difficulty:</p>
+          <p id="difficulty" class="text-right ml-2"></p>
+        </div>
+        <div class="flex text-center items-start justify-between mb-2">
+          <p class="font-semibold text-lg">Duration:</p>
+          <p id="duration" class="ml-2 text-right"></p>
+        </div>
+       
+
+      </div>
+    </div>
+    <button
+      id="save-escape-room"
+      class="bg-blue-500 text-white px-6 py-2 rounded-lg font-semibold"
+    >Save Recipe</button>
+    <button
+      id="delete-escape-room"
+      class="bg-red-500 text-white px-6 py-2 rounded-lg font-semibold hidden"
+    >Delete</button>
+
+  </div>
+</div>
+
+<script src="/js/manageescaperooms.js">
+</script>
