--- a/views/manageescaperooms.handlebars
+++ b/views/manageescaperooms.handlebars
@@ -6,11 +6,20 @@
   <h1 class="text-center text-3xl">Active Rooms</h1>
   <div id="room-list" class="items-center grid md:grid-cols-2 lg:grid-cols-3">
     {{#each rooms}}
-      <div id="{{this.theme}}"
+      <div
+        id="{{this.theme}}"
         class="cursor-pointer escape-room bg-white rounded-lg mx-8 my-5 py-2 px-5"
       >
-        <h1 id="{{this.theme}}" class="text-xl text-center p-2">{{this.theme}}</h1>
-        <img src={{this.image_url}} alt="{{this.theme}}" class="rounded-md" id="{{this.theme}}" />
+        <h1
+          id="{{this.theme}}"
+          class="text-xl text-center p-2"
+        >{{this.theme}}</h1>
+        <img
+          src={{this.image_url}}
+          alt="{{this.theme}}"
+          class="rounded-md"
+          id="{{this.theme}}"
+        />
         {{!-- <p class="py-2">{{this.description}}</p>
         <p>Difficulty: {{this.difficulty}} </p>
         <p>Duration: {{this.duration}}</p> --}}
@@ -33,10 +42,10 @@
       id="closeModal"
       class="absolute top-5 right-8 text-xl font-bold cursor-pointer"
     >&times;</span>
-    <h2 class="font-bold text-4xl my-4" id="escape-room-theme"></h2>
+    <h2 class="font-bold text-3xl my-4" id="escape-room-theme"></h2>
     <div class="flex flex-wrap justify-between">
-      <div class="w-full md:w-1/3">
-        <img id="escape-room-image" class="w-full h-auto rounded-lg mb-4" alt="" />
+      <div class="w-full">
+        <img id="escape-room-image" class="w-full rounded-lg mb-4" alt="" />
         <div class="flex items-center justify-between">
 
         </div>
@@ -44,28 +53,27 @@
       <div class="w-full md:w-2/3 pl-4">
         <div class="flex text-center items-start justify-between mb-2">
           <p class="font-semibold text-lg">Description:</p>
-          <p id="description" class="text-right ml-2"></p>
+          <p id="escape-room-description" class="text-right ml-2"></p>
         </div>
         <div class="flex text-center items-start justify-between mb-2">
           <p class="font-semibold text-lg">Difficulty:</p>
-          <p id="difficulty" class="text-right ml-2"></p>
+          <p id="escape-room-difficulty" class="text-right ml-2"></p>
         </div>
         <div class="flex text-center items-start justify-between mb-2">
-          <p class="font-semibold text-lg">Duration:</p>
-          <p id="duration" class="ml-2 text-right"></p>
+          <p class="font-semibold text-lg">Duration :</p>
+          <p id="escape-room-duration" class="ml-2 text-right"></p>
         </div>
-       
 
       </div>
     </div>
     <button
       id="save-escape-room"
-      class="bg-blue-500 text-white px-6 py-2 rounded-lg font-semibold"
-    >Save Recipe</button>
+      class="my-4 bg-blue-500 text-white px-6 py-2 rounded-lg font-semibold"
+    >Edit Escape Room</button>
     <button
       id="delete-escape-room"
-      class="bg-red-500 text-white px-6 py-2 rounded-lg font-semibold hidden"
-    >Delete</button>
+      class="my-4 bg-red-500 text-white px-6 py-2 rounded-lg font-semibold"
+    >Delete Escape Room</button>
 
   </div>
 </div>
