--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -73,7 +73,7 @@
   <section id="bookings" class="">
     <h1 class="text-center text-3xl my-5 font-bold">Today's Bookings &#128218;</h1>
     <div
-      class="py-3 grid grid-cols-1 gap-y-8 md:grid-cols-2 md:mb-24 xl:grid-cols-4 xl:mx-5"
+      class="py-3 grid grid-cols-1 gap-y-2 md:grid-cols-2 md:mb-24 xl:grid-cols-4 xl:mx-5"
     >
       {{#each bookings}}
 
@@ -81,10 +81,10 @@
 
           <h3 class="text-xl font-bold">{{this.escaperoom.theme}}</h3>
           <p>
-            {{this.time}}
+            {{formatTime this.time}}
           </p>
           <p>
-            {{this.date}}
+            {{formatDate this.date}}
           </p>
           <p>
             {{this.user.name}}
