--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -77,18 +77,15 @@
     >
       {{#each bookings}}
 
-        <div class="bg-white rounded-lg shadow-lg p-5 mb-5 mx-5">
+        <div class="bg-white rounded-lg shadow-lg p-5 mb-5 mx-5 relative">
+          <p class="text-2xl pb-2 font-bold">{{this.user.name}}
+          </p>
+          <h3 class="text-xl py-2">Room: {{this.escaperoom.theme}}</h3>
 
-          <h3 class="text-xl font-bold">{{this.escaperoom.theme}}</h3>
-          <p>
+          <p class="absolute top-3 right-5 text-right text-2xl font-bold">
             {{formatTime this.time}}
           </p>
-          <p>
-            {{formatDate this.date}}
-          </p>
-          <p>
-            {{this.user.name}}
-          </p>
+
         </div>
       {{/each}}
     </div>
