updates styling of notification bell

--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -1,6 +1,6 @@
 <div class="bg-gray-100 min-h-screen">
   <button
-    class="absolute right-5 rounded-lg m-5 p-3 bg-white text-xl text-center shadow-lg hover:border-blue-700/50 hover:border-2"
+    class="absolute right-5 rounded-lg m-5 p-3  text-xl text-center  hover:border-blue-700/50 hover:border-2"
   >
     &#128276;
   </button>
