--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -77,7 +77,7 @@
     >
       {{#each bookings}}
 
-        <div class="bg-white rounded-lg shadow-lg p-5 mb-5 mx-5 relative">
+        <a href="/admin/bookings" class="hover:border-blue-700/50 hover:border-2 bg-white rounded-lg shadow-lg p-5 mb-5 mx-5 relative">
           <p class="text-2xl pb-2 font-bold">{{this.user.name}}
           </p>
           <h3 class="text-xl py-2">Room: {{this.escaperoom.theme}}</h3>
@@ -86,7 +86,7 @@
             {{formatTime this.time}}
           </p>
 
-        </div>
+        </a>
       {{/each}}
     </div>
   </section>
